[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/CreditsScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/btn-voltar-pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/btn-voltar-normal.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="credits" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Cr√©ditos:"
align = 1
valign = 1

[node name="creator" type="LinkButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -91.5
margin_right = 45.0
margin_bottom = -58.5
custom_fonts/font = SubResource( 2 )
text = "Criador"
underline = 1

[node name="translator_ptBR" type="LinkButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = -28.5
margin_right = 96.5
margin_bottom = 4.5
focus_mode = 2
custom_fonts/font = SubResource( 2 )
text = "Tradutor (PT/BR)"
underline = 1

[node name="programmer" type="LinkButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = 32.5
margin_right = 80.5
margin_bottom = 65.5
focus_mode = 2
custom_fonts/font = SubResource( 2 )
text = "Programador"
underline = 1

[node name="back_button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -70.0
margin_right = 75.0
margin_bottom = -40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[connection signal="pressed" from="creator" to="." method="_on_creator_pressed"]
[connection signal="pressed" from="translator_ptBR" to="." method="_on_translator_ptBR_pressed"]
[connection signal="pressed" from="programmer" to="." method="_on_programmer_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
